--- a/build.yaml
+++ b/build.yaml
@@ -569,6 +569,7 @@ filegroups:
   - test/core/util/grpc_profiler.h
   - test/core/util/mock_endpoint.h
   - test/core/util/parse_hexstring.h
+  - test/core/util/passthru_endpoint.h
   - test/core/util/port.h
   - test/core/util/port_server_client.h
   - test/core/util/slice_splitter.h
@@ -579,6 +580,7 @@ filegroups:
   - test/core/util/grpc_profiler.c
   - test/core/util/mock_endpoint.c
   - test/core/util/parse_hexstring.c
+  - test/core/util/passthru_endpoint.c
   - test/core/util/port_posix.c
   - test/core/util/port_server_client.c
   - test/core/util/port_windows.c
