--- a/build.yaml
+++ b/build.yaml
@@ -189,6 +189,7 @@ filegroups:
   - src/cpp/common/core_codegen.h
   - src/cpp/common/create_auth_context.h
   - src/cpp/plugin/proto_server_reflection_plugin.h
+  - src/cpp/plugin/reflection/proto_server_reflection.h
   - src/cpp/plugin/reflection/reflection.grpc.pb.h
   - src/cpp/plugin/reflection/reflection.pb.h
   - src/cpp/server/dynamic_thread_pool.h
