--- a/tools/dockerfile/test/cxx_nacl_x64/Dockerfile
+++ b/tools/dockerfile/test/cxx_nacl_x64/Dockerfile
@@ -81,19 +81,17 @@ RUN echo 'deb-src http://archive.ubuntu.com/ubuntu/ trusty-security multiverse' 
 RUN apt-get update
 RUN apt-get -y install msttcorefonts
 
-# Download source
+# Download source and build NaCl SDK
 RUN git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git
-RUN mkdir chromium && cd chromium
-RUN ../depot_tools/fetch --nohooks --no-history chromium
-RUN cd src && ./build/install-build-deps.sh --nacl --no-prompt && cd ..
-
-# Build NaCl toolchain
-# The GYP_DEFINES is needed to install some ARM-specific tools necessary to
-# build the SDK.
-# https://chromium.googlesource.com/chromium/src/+/master/native_client_sdk/src/BUILDING.rst
-RUN cd src/native_client_sdk/src
-RUN GYP_DEFINES=target_arch=arm ../../../depot_tools/gclient runhooks
-RUN build_tools/build_sdk.py
+ENV PATH $pwd/depot_tools:$PATH
+RUN mkdir chromium && cd chromium && \
+  fetch --nohooks --no-history chromium && \
+  cd src && ./build/install-build-deps.sh --nacl --no-prompt && \
+  # The GYP_DEFINES is needed to install some ARM-specific tools necessary to
+  # build the SDK.
+  # https://chromium.googlesource.com/chromium/src/+/master/native_client_sdk/src/BUILDING.rst
+  GYP_DEFINES=target_arch=arm gclient runhooks && \
+  ./native_client_sdk/src/build_tools/build_sdk.py
 
 # Prepare ccache
 RUN ln -s /usr/bin/ccache /usr/local/bin/gcc
