Adding third_party/nanopb as include search path.

--- a/templates/Makefile.template
+++ b/templates/Makefile.template
@@ -237,7 +237,7 @@
   LDFLAGS += -fPIC
   endif
 
-  INCLUDES = . include $(GENDIR)
+  INCLUDES = . include third_party/nanopb $(GENDIR)
   LDFLAGS += -Llibs/$(CONFIG)
 
   ifeq ($(SYSTEM),Darwin)
